<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_md"
    tools:context=".QuizActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_md"
        android:textAlignment="center"
        android:textSize="@dimen/text_lg"
        android:text="@string/fore_title_quiz"
        tools:ignore="SpUsage" />

    <RadioGroup
        android:id="@+id/rg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="@string/rb_10" />

        <RadioButton
            android:id="@+id/rb_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="@string/rb_5" />

        <RadioButton
            android:id="@+id/rb_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="@string/rb_13" />

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="@string/rb_1" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />
</LinearLayout>