<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_sm"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_xl"
        android:layout_marginBottom="@dimen/margin_md"
        android:text='@string/fore_title' />

    <EditText
        android:id="@+id/idInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/idInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/idInputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/idInputPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/idBtnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:text="@string/button_reg_save" />

</LinearLayout>