<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:background="@color/cardview_dark_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/tvName"
            android:textColor="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_lg"
            android:text="@string/tv_name"/>

        <TextView
            android:id="@+id/tvEmail"
            android:textColor="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_lg"
            android:text="@string/tv_email"/>

        <TextView
            android:id="@+id/tvPhone"
            android:textColor="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_lg"
            android:text="@string/tv_phone"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_call" />

        <Button
            android:id="@+id/buttonQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_quiz" />

        <Button
            android:id="@+id/buttonLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_lang" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_marginTop="@dimen/margin_md"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_result_quiz" />
    </LinearLayout>
</LinearLayout>
